--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   },
   "license": "MIT",
   "dependencies": {
-    "aurelia-bootstrapper": "^2.3.0",
     "aurelia-animator-css": "^1.0.4",
+    "aurelia-bootstrapper": "^2.3.0",
+    "aurelia-polyfills": "^1.3.0",
     "bluebird": "^3.5.2",
-    "aurelia-polyfills": "^1.3.0"
+    "ify-loader": "^1.1.0"
   },
   "peerDependencies": {},
   "devDependencies": {
@@ -63,6 +64,7 @@
     "nps": "^5.9.3",
     "nps-utils": "^1.7.0",
     "opn": "^5.4.0",
+    "plotly.js": "^1.42.5",
     "plugin-error": "^1.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
